deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atharva-deployment
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: atharva-container
        image: nginx
        ports:
        - containerPort: 80
