multi_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: atharva-pod
spec:
  containers:
  - name: atharva-container1
    image: atharva7823/vegetable:v1.0.1
    ports:
    - containerPort: 5000
    
  - name: atharva-container2
    image: atharva7823/organic:v1.1.0
    ports:
    - containerPort: 5656
