pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: atharva-pod
spec:
  containers:
  - name: atharva-container
    image: nginx
    ports:
    - containerPort: 80
