deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atharva-deployment1
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: atharva-container1
        image: atharva7823/marketplace-frontend:1.0
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: atharva-service1
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30008

  type: NodePort
