deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atharva-deployment2
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: atharva-container2
        image: atharva7823/organic:v1.1.0
        ports:
        - containerPort: 5656

---
apiVersion: v1
kind: Service
metadata:
  name: atharva-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5656
      targetPort: 5656
  type: LoadBalancer
