deployment3.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: atharva-deployment3
  namespace: atharva-ns

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: atharva-container3
        image: atharva7823/marketplace-frontend:1.0

        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service

metadata:
  name: atharva-service3
  namespace: atharva-ns

spec:
  selector:
    app: web

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
