http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: atharva-route
  namespace: atharva-ns

spec:
  parentRefs:
    - name: atharva-gateway

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /

      backendRefs:
        - name: atharva-service3
          port: 3000
